# forklift-quiz

./: .augmentignore  .env.example  .pre-commit-config.yaml  .projlist  Makefile  README.md  app.py  pyproject.toml  railway.json
.streamlit/: config.toml
assets/: ai_studio_code.html
data/: cetegory_mapping.json  dump-questions.py  hint_mapping.json  learning_plan.json  mapping_car_analogy.json  mapping_category.json  mapping_difficulty.json  mapping_hints.json  mapping_hints_en.json  mapping_hints_long.json  mapping_trap.json  seed_questions.json  seed_questions_demo.json  setup_grafana.md  trap_rank.json  update_categories.py  update_categories2.py  update_hints.py
doc/: 00-architecture.md  01-functional.md  02-domain-logic.md  02-flows.md  03-data-model.md  03-demo.md  03-flows.md  04-UX.md  COOKBOOK.md  arch-style-hex.md  arch-style-monolith.md  arch-style-n-tier.md  architecture.md  compare_designs.md  diagrams.md  flows.md  regression.md  spec.md  usecases.md
doc/adr/: 001-game-engine-pattern.md  007-db_vs_file.md
scripts/: update_categories.py  update_hints.py
src/: config.py  fsm.py  models.py  repository.py  service.py  strategies.py  viewmodel.py
src/components/: category_button.py  mobile_suite.py
src/components/mobile/: __init__.py  dashboard.py  header.py  hero.py  option.py  result.py  shared.py
src/game/: core.py  director.py  flows.py  service.py  steps.py
src/game/steps/: __init__.py  dashboard.py  question.py  summary.py  text.py
src/quiz/adapters/: db_manager.py  seeder.py  sqlite_repository.py  supabase_repository.py
src/quiz/application/: service.py  strategies.py
src/quiz/domain/: category_selector.py  models.py  ports.py  profile_manager.py  spaced_repetition.py
src/quiz/presentation/: renderer.py  state_provider.py  viewmodel.py
src/quiz/presentation/views/: components.py  dashboard_view.py  question_view.py  summary_view.py
src/shared/: telemetry.py
supabase/migrations/: 001_initial_schema.sql
tests/: conftest.py  test_daily_logic.py  test_domain_models.py  test_flows.py  test_full_quiz_run.py  test_full_scenarios.py  test_game_driver.py  test_game_engine.py  test_gamification.py  test_renderer.py  test_renderer_contract.py  test_repository.py  test_seeding.py  test_service.py  test_smart_seeding.py  test_strategy.py  test_streak_logic.py  test_view_interactions.py  test_viewmodel.py
tests/drivers/: game_driver.py
tests/functional/: test_onboarding_scenarios.py  test_quiz_scenarios.py
tests/helpers/: game_driver.py
tests/integration/repository/: test_analytics.py  test_crud.py  test_db_manager.py  test_pickle_safety.py  test_queries.py  test_sqlite_repository.py  test_streak_persistence.py
tests/unit/: test_category_flow.py  test_config.py  test_dashboard_step.py
tests/unit/components/: test_mobile_dashboard.py
tests/unit/domain/: test_models.py  test_profile_manager.py  test_spaced_repetition.py
tests/unit/game/: test_category_flow.py  test_dashboard_step.py  test_director.py  test_flows.py  test_service.py
tests/unit/presentation/: test_renderer.py
tests/unit/quiz/: test_category_selector.py
