[project]
name = "warehouse-quiz-app"
version = "1.0.1"
description = "Commercial grade Streamlit Quiz App with adaptive learning"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30.0",
    "pydantic>=2.0.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.0",
    "sentry-sdk>=2.49.0",
    "prometheus-client>=0.24.1"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.1.0",  # Added
    "ruff>=0.9.0",        # Added
    "mypy>=1.14.0",       # Added
    "types-requests",     # Common stubs (optional, add others as needed)
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]

[tool.setuptools]
packages = ["src"]


[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
# Automatically run coverage, show missing lines, and set strict markers
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "*/__init__.py",
    "tests/*"
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@abstractmethod"
]

# --- RUFF CONFIGURATION (Linter & Formatter) ---
[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable: Pyflakes (F), pycodestyle (E, W), isort (I), pyupgrade (UP), flake8-bugbear (B)
select = ["F", "E", "W", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- MYPY CONFIGURATION (Type Checker) ---
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["tests/"]
